# django-admin-constructor

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
django_admin_constructor/: admin.py  factories.py  utils.py
example_project/: .env.sample
